# validity

./: .README.md.swp  .gitignore  .hlint.yaml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  DOUBLE.md  LICENSE  README.md  check_travis_locally.sh  ci.nix  default.nix  flake.nix  hooks.sus  lts-10.yaml  lts-11.yaml  lts-12.yaml  lts-12_8.4.3.yaml  lts-12_8.4.4.yaml  lts-13.yaml  lts-2.yaml  lts-3.yaml  lts-5.yaml  lts-6.yaml  lts-7.yaml  lts-8.yaml  lts-9.yaml  makefile  nightly.yaml  nixpkgs-version.nix  overlay.nix  presentation-backward.md  presentation.md  release.nix  shell.nix  stack-9.2.1.yaml  stack.yaml  tags.sh  zift.hs
genvalidity/: CHANGELOG.md  default.nix  genvalidity.cabal  package.yaml
genvalidity-bytestring/: CHANGELOG.md  default.nix  genvalidity-bytestring.cabal  package.yaml
genvalidity-bytestring/bench/: Main.hs
genvalidity-bytestring/src/Data/GenValidity/: ByteString.hs
genvalidity-bytestring/test/Data/GenValidity/: ByteStringSpec.hs
genvalidity-containers/: CHANGELOG.md  LICENSE  default.nix  genvalidity-containers.cabal  package.yaml
genvalidity-containers/bench/: Main.hs
genvalidity-containers/src/Data/GenValidity/: Containers.hs  IntMap.hs  Map.hs  Sequence.hs  Set.hs  Tree.hs
genvalidity-containers/test/Test/Validity/: ContainersSpec.hs
genvalidity-hspec/: CHANGELOG.md  default.nix  genvalidity-hspec.cabal  package.yaml
genvalidity-hspec-aeson/: CHANGELOG.md  default.nix  genvalidity-hspec-aeson.cabal  package.yaml  stack.yaml
genvalidity-hspec-aeson/src/Test/Validity/: Aeson.hs
genvalidity-hspec-aeson/test/Test/Validity/: AesonSpec.hs
genvalidity-hspec-binary/: CHANGELOG.md  README.md  default.nix  genvalidity-hspec-binary.cabal  package.yaml
genvalidity-hspec-binary/src/Test/Validity/: Binary.hs
genvalidity-hspec-binary/test/Test/Validity/: BinarySpec.hs
genvalidity-hspec-cereal/: CHANGELOG.md  LICENSE  default.nix  genvalidity-hspec-cereal.cabal  package.yaml
genvalidity-hspec-cereal/src/Test/Validity/: Cereal.hs
genvalidity-hspec-cereal/test/: DocTest.hs
genvalidity-hspec-cereal/test/Test/Validity/: CerealSpec.hs
genvalidity-hspec-hashable/: CHANGELOG.md  README.md  default.nix  genvalidity-hspec-hashable.cabal  package.yaml
genvalidity-hspec-hashable/src/Test/Validity/: Hashable.hs
genvalidity-hspec-hashable/test/Test/Validity/: HashableSpec.hs
genvalidity-hspec/src/Data/GenValidity/: Hspec.hs
genvalidity-hspec/src/Test/: Validity.hs
genvalidity-hspec/src/Test/Validity/: Applicative.hs  Arbitrary.hs  Eq.hs  Functions.hs  Functor.hs  GenRelativeValidity.hs  GenValidity.hs  Monad.hs  Monoid.hs  Operations.hs  Ord.hs  ReadShow.hs  Relations.hs  RelativeValidity.hs  Show.hs  Shrinking.hs  Types.hs  Utils.hs  Validity.hs
genvalidity-hspec/test/: DocTest.hs
genvalidity-hspec/test/Test/Validity/: ApplicativeSpec.hs  ArbitrarySpec.hs  EqSpec.hs  FunctorSpec.hs  GenRelativeValiditySpec.hs  GenValiditySpec.hs  MonadSpec.hs  MonoidSpec.hs  OrdSpec.hs  ReadShowSpec.hs  RelativeValiditySpec.hs  ShowSpec.hs  ShrinkingSpec.hs  TestUtils.hs
genvalidity-path/: CHANGELOG  CHANGELOG.md  default.nix  genvalidity-path.cabal  package.yaml
genvalidity-path/bench/: Main.hs
genvalidity-path/src/Data/GenValidity/: Path.hs
genvalidity-path/test/Data/GenValidity/: PathSpec.hs
genvalidity-property/: CHANGELOG.md  default.nix  genvalidity-property.cabal  package.yaml
genvalidity-property/doctest/: DocTest.hs
genvalidity-property/src/Test/: Validity.hs
genvalidity-property/src/Test/Validity/: Arbitrary.hs  Functions.hs  GenRelativeValidity.hs  GenValidity.hs  Operations.hs  Property.hs  Relations.hs  RelativeValidity.hs  Types.hs  Utils.hs
genvalidity-property/test/: DocTest.hs
genvalidity-property/test/Test/Validity/: MonoidSpec.hs
genvalidity-text/: CHANGELOG.md  default.nix  genvalidity-text.cabal  package.yaml
genvalidity-text/bench/: Main.hs
genvalidity-text/src/Data/GenValidity/: Text.hs
genvalidity-text/test/Data/GenValidity/: TextSpec.hs
genvalidity-time/: CHANGELOG.md  default.nix  genvalidity-time.cabal  package.yaml
genvalidity-time/bench/: Main.hs
genvalidity-time/src/Data/GenValidity/: Time.hs
genvalidity-time/test/Data/GenValidity/: TimeSpec.hs
genvalidity-unordered-containers/: CHANGELOG.md  default.nix  genvalidity-unordered-containers.cabal  package.yaml
genvalidity-unordered-containers/src/Data/GenValidity/: HashMap.hs  HashSet.hs  UnorderedContainers.hs
genvalidity-unordered-containers/test/Test/Validity/: UnorderedContainersSpec.hs
genvalidity-vector/: CHANGELOG.md  default.nix  genvalidity-vector.cabal  package.yaml
genvalidity-vector/src/Data/GenValidity/: Vector.hs
genvalidity-vector/test/Test/Validity/: VectorSpec.hs
genvalidity/src/Data/: GenRelativeValidity.hs  GenValidity.hs
genvalidity/src/Data/GenValidity/: Utils.hs
genvalidity/test/Data/: GenValiditySpec.hs  InstanceSpec.hs
genvalidity/test/Data/GenValidity/: GenericSpec.hs  ShrinkGenericSpec.hs
validity/: CHANGELOG.md  default.nix  package.yaml  validity.cabal
validity-bytestring/: CHANGELOG.md  default.nix  package.yaml  validity-bytestring.cabal
validity-bytestring/src/Data/Validity/: ByteString.hs
validity-containers/: CHANGELOG.md  default.nix  package.yaml  validity-containers.cabal
validity-containers/src/Data/Validity/: Containers.hs  IntMap.hs  Map.hs  Sequence.hs  Set.hs  Tree.hs
validity-path/: CHANGELOG.md  default.nix  package.yaml  validity-path.cabal
validity-path/src/Data/Validity/: Path.hs
validity-path/test/Data/Validity/: PathSpec.hs
validity-text/: CHANGELOG.md  LICENSE  default.nix  package.yaml  validity-text.cabal
validity-text/src/Data/Validity/: Text.hs
validity-unordered-containers/: CHANGELOG.md  default.nix  package.yaml  validity-unordered-containers.cabal
validity-uuid/: CHANGELOG.md  default.nix  package.yaml  validity-uuid.cabal
validity-uuid/src/Data/Validity/: UUID.hs
validity-vector/: default.nix  package.yaml  validity-vector.cabal
validity/src/Data/: RelativeValidity.hs  Validity.hs
validity/test/Data/: ValiditySpec.hs
(+407 files in other folders)
