name: genvalidity-bytestring
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity#readme
synopsis: GenValidity support for ByteString
description:
    Please see README.md
category: Testing
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    exposed-modules:
        Data.GenValidity.ByteString
    build-depends:
        base >=4.7 && <5,
        validity >= 0.4 && < 0.5,
        validity-bytestring >=0.2 && < 0.3,
        genvalidity >=0.4 && <0.5,
        bytestring -any,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: src

test-suite genvalidity-bytestring-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        hspec -any,
        QuickCheck -any,
        genvalidity -any,
        genvalidity-bytestring -any,
        genvalidity-hspec -any,
        bytestring -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Data.GenValidity.ByteStringSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-name-shadowing
