name:                genvalidity-containers
version:             0.1.0.2
synopsis:            GenValidity support for containers
description:         Please see README.md
homepage:            https://github.com/NorfairKing/validity#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove
category:            Testing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Data.GenValidity.Containers
    , Data.GenValidity.Map
    , Data.GenValidity.Tree
  build-depends:
      base       < 5
    , validity
    , validity-containers
    , genvalidity
    , containers
    , QuickCheck
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NorfairKing/validity
