name:                genvalidity-containers
version:             0.2.0.0
synopsis:            GenValidity support for containers
description:         Please see README.md
homepage:            https://github.com/NorfairKing/validity#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Data.GenValidity.Containers
    , Data.GenValidity.Map
    , Data.GenValidity.Tree
    , Data.GenValidity.Sequence
    , Data.GenValidity.Set
  build-depends:
      base       < 5
    , QuickCheck
    , containers
    , genvalidity  >= 0.3 && < 0.4
    , validity >= 0.3 && < 0.4
    , validity-containers >= 0.1 && < 0.2
  default-language:    Haskell2010

test-suite genvalidity-containers-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Test.Validity.ContainersSpec
    build-depends:
        base >=4.9 && <=5,
        containers,
        genvalidity,
        genvalidity-containers,
        genvalidity-hspec,
        hspec >= 2.2 && < 2.3
    default-language: Haskell2010
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall


source-repository head
  type:     git
  location: https://github.com/NorfairKing/validity
