name: genvalidity-containers
version: 0.3.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity#readme
synopsis: GenValidity support for containers
description:
    Please see README.md
category: Testing
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    exposed-modules:
        Data.GenValidity.Containers
        Data.GenValidity.Map
        Data.GenValidity.Tree
        Data.GenValidity.Sequence
        Data.GenValidity.Set
    build-depends:
        base <5,
        QuickCheck -any,
        containers -any,
        genvalidity >=0.4 && <0.5,
        validity >=0.4 && <0.5,
        validity-containers >=0.2 && <0.3
    default-language: Haskell2010
    hs-source-dirs: src

test-suite genvalidity-containers-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        containers -any,
        genvalidity -any,
        genvalidity-containers -any,
        genvalidity-hspec -any,
        hspec >=2.2 && <2.5
    default-language: Haskell2010
    hs-source-dirs: test/
    other-modules:
        Test.Validity.ContainersSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
