name: genvalidity-hspec-aeson
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Test.Validity.Aeson
    build-depends:
        base >=4.9 && <=5,
        genvalidity-hspec >= 0.3 && < 0.4,
        genvalidity >= 0.3 && < 0.4,
        hspec >= 2.2 && < 2.3,
        aeson >= 0.11 && < 0.12,
        QuickCheck >= 2.8 && < 2.9,
        deepseq >= 1.4 && < 1.5
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options: -Wall

test-suite genvalidity-hspec-aeson-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        genvalidity-hspec-aeson -any
    default-language: Haskell2010
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
