name: genvalidity-hspec-aeson
version: 0.0.0.0
synopsis: Standard spec's for aeson-related instances
description: Standard spec's for aeson-related Instances
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: Testing
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Test.Validity.Aeson
    build-depends:
        base >=4.9 && <=5,
        genvalidity-hspec >= 0.3 && < 0.4,
        genvalidity >= 0.3 && < 0.4,
        hspec >= 2.2 && < 2.3,
        aeson >= 0.11 && < 0.12,
        QuickCheck >= 2.8 && < 2.9,
        deepseq >= 1.4 && < 1.5
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options: -Wall

test-suite genvalidity-hspec-aeson-doctests
  default-language:   Haskell2010
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            DocTest.hs
  build-depends:      base
    , doctest               >= 0.11      && < 0.12
    , genvalidity-hspec-aeson

test-suite genvalidity-hspec-aeson-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Test.Validity.AesonSpec
    build-depends:
        base >=4.9 && <=5,
        genvalidity >= 0.3 && < 0.4,
        genvalidity-hspec-aeson,
        hspec >= 2.2 && < 2.3
    default-language: Haskell2010
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall


source-repository head
  type:     git
  location: https://github.com/NorfairKing/validity
