name: genvalidity-hspec-cereal
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
synopsis: Standard spec's for cereal-related instances
description:
    Standard spec's for cereal-related Instances
category: Testing
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    exposed-modules:
        Test.Validity.Cereal
    build-depends:
        base >=4.9 && <=5,
        genvalidity-hspec >=0.5 && <0.6,
        genvalidity >=0.4 && <0.5,
        hspec -any,
        cereal >=0.5 && <0.6,
        QuickCheck -any,
        deepseq >=1.4 && <1.5
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options: -Wall

test-suite genvalidity-hspec-cereal-doctests
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    build-depends:
        base -any,
        doctest >=0.11 && <0.12,
        genvalidity-hspec-cereal -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded
test-suite genvalidity-hspec-cereal-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        genvalidity -any,
        genvalidity-hspec-cereal -any,
        hspec -any
    default-language: Haskell2010
    hs-source-dirs: test/
    other-modules:
        Test.Validity.CerealSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
