name: genvalidity-hspec-hashable
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity
synopsis: Standard spec's for Hashable instances
description:
    Standard spec's for Hashable instances
category: Testing
author: Nick Van den Broeck
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    exposed-modules:
        Test.Validity.Hashable
    build-depends:
        base >=4.9 && <5,
        validity >=0.4 && <0.5,
        genvalidity-hspec >=0.5 && <0.6,
        genvalidity >=0.4 && <0.5,
        genvalidity-property >=0.1 && <0.2,
        hspec >=2.2 && <2.5,
        hashable >=1.2 && <1.3,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: src

test-suite genvalidity-hspec-hashable-doctests
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    build-depends:
        base -any,
        doctest >=0.11 && <0.12,
        hashable >=1.2 && <1.3,
        genvalidity-hspec-hashable -any,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded
test-suite genvalidity-hspec-hashable-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        genvalidity -any,
        genvalidity-hspec -any,
        genvalidity-hspec-hashable -any,
        hashable -any,
        hspec -any,
        hspec-core -any,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: test/
    other-modules:
        Test.Validity.HashableSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
