name:                genvalidity-hspec
version:             0.3.0.0
synopsis:            Standard spec's for GenValidity instances
description: 
  Note: There are companion packages for this library:
  .
  * <https://hackage.haskell.org/package/genvalidity-hspec-aeson genvalidity-hspec-aeson>
  .
  * <https://hackage.haskell.org/package/genvalidity-hspec-cereal genvalidity-hspec-cereal>

homepage:            https://github.com/NorfairKing/validity#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Test.Validity
    , Test.Validity.Applicative
    , Test.Validity.Arbitrary
    , Test.Validity.Eq
    , Test.Validity.Functions
    , Test.Validity.Functions.CanFail
    , Test.Validity.Functions.Equivalence
    , Test.Validity.Functions.Idempotence
    , Test.Validity.Functions.Inverse
    , Test.Validity.Functions.Validity
    , Test.Validity.Functor
    , Test.Validity.GenRelativeValidity
    , Test.Validity.GenValidity
    , Test.Validity.Monad
    , Test.Validity.Monoid
    , Test.Validity.Operations
    , Test.Validity.Operations.Associativity
    , Test.Validity.Operations.Commutativity
    , Test.Validity.Operations.Identity
    , Test.Validity.Ord
    , Test.Validity.Relations
    , Test.Validity.Relations.Antireflexivity
    , Test.Validity.Relations.Antisymmetry
    , Test.Validity.Relations.Reflexivity
    , Test.Validity.Relations.Symmetry
    , Test.Validity.Relations.Transitivity
    , Test.Validity.RelativeValidity
    , Test.Validity.Types
    , Test.Validity.Utils
  build-depends:
        base                               < 5
      , validity                 >= 0.3 && < 0.4
      , genvalidity              >= 0.3 && < 0.4
      , QuickCheck
      , hspec                    >= 2.2 && < 2.4
  default-language:    Haskell2010


test-suite genvalidity-hspec-doctests
  default-language:   Haskell2010
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            DocTest.hs
  build-depends:      base
    , doctest               >= 0.11      && < 0.12
    , genvalidity-hspec

test-suite genvalidity-hspec-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Test.Validity.ApplicativeSpec
      , Test.Validity.ArbitrarySpec
      , Test.Validity.EqSpec
      , Test.Validity.FunctorSpec
      , Test.Validity.GenRelativeValiditySpec
      , Test.Validity.GenValiditySpec
      , Test.Validity.MonoidSpec
      , Test.Validity.MonadSpec
      , Test.Validity.OrdSpec
      , Test.Validity.RelativeValiditySpec
    build-depends:
        base >=4.9 && <=5,
        genvalidity >= 0.3 && < 0.4,
        genvalidity-hspec,
        hspec >= 2.2 && < 2.3
    default-language: Haskell2010
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall


source-repository head
  type:     git
  location: https://github.com/NorfairKing/validity
