name: genvalidity-hspec
version: 0.4.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity#readme
synopsis: Standard spec's for GenValidity instances
description:
    Note: There are companion packages for this library:
    .
    * <https://hackage.haskell.org/package/genvalidity-hspec-aeson genvalidity-hspec-aeson>
    .
    * <https://hackage.haskell.org/package/genvalidity-hspec-cereal genvalidity-hspec-cereal>
category: Testing
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    exposed-modules:
        Test.Validity
        Test.Validity.Applicative
        Test.Validity.Arbitrary
        Test.Validity.Eq
        Test.Validity.Functor
        Test.Validity.GenRelativeValidity
        Test.Validity.GenValidity
        Test.Validity.Monad
        Test.Validity.Monoid
        Test.Validity.Ord
        Test.Validity.RelativeValidity
        Test.Validity.Utils
    build-depends:
        base >= 4.9 && <5,
        validity >=0.3 && <0.4,
        genvalidity >=0.3 && <0.4,
        QuickCheck -any,
        hspec >=2.2 && <2.5,
        genvalidity-property >= 0.0 && < 0.1
    default-language: Haskell2010
    hs-source-dirs: src

test-suite genvalidity-hspec-doctests
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    build-depends:
        base -any,
        doctest >=0.11 && <0.12,
        genvalidity-hspec -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded

test-suite genvalidity-hspec-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        genvalidity >=0.3 && <0.4,
        genvalidity-hspec -any,
        hspec,
        hspec-core,
        QuickCheck
    default-language: Haskell2010
    hs-source-dirs: test/
    other-modules:
        Test.Validity.TestUtils
        Test.Validity.ApplicativeSpec
        Test.Validity.ArbitrarySpec
        Test.Validity.EqSpec
        Test.Validity.FunctorSpec
        Test.Validity.GenRelativeValiditySpec
        Test.Validity.GenValiditySpec
        Test.Validity.MonadSpec
        Test.Validity.MonoidSpec
        Test.Validity.OrdSpec
        Test.Validity.RelativeValiditySpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
