name:                genvalidity-path
version:             0.1.0.0
synopsis:            GenValidity support for Path
description:         Please see README.md
homepage:            https://github.com/NorfairKing/validity#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.GenValidity.Path
  build-depends:       base       < 5
                     , validity-path >= 0.1 && < 0.2
                     , genvalidity >= 0.3 && < 0.4
                     , path >= 0.5 && < 0.6
  default-language:    Haskell2010

test-suite genvalidity-path-test
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  other-modules:
    Data.GenValidity.PathSpec
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wall
    -fno-warn-name-shadowing
  build-depends:
      base
    , genvalidity-path
    , hspec
    , genvalidity-hspec
    , path

source-repository head
  type:     git
  location: https://github.com/NorfairKing/validity
