name: genvalidity-path
version: 0.2.0.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity#readme
synopsis: GenValidity support for Path
description:
    Please see README.md
category: Testing
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    exposed-modules:
        Data.GenValidity.Path
    build-depends:
        base >=4.7 && <5,
        validity-path >=0.2 && <0.3,
        genvalidity >=0.4 && <0.5,
        path >=0.5 && <0.7
    default-language: Haskell2010
    hs-source-dirs: src

test-suite genvalidity-path-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        genvalidity-path -any,
        hspec -any,
        genvalidity-hspec -any,
        path -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Data.GenValidity.PathSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-name-shadowing
