name: genvalidity-property
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity#readme
synopsis: Standard properties for functions on `Validity` types
description:
    Standard properties for functions on `Validity` types
category: Testing
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    exposed-modules:
        Test.Validity.Functions
        Test.Validity.Functions.CanFail
        Test.Validity.Functions.Equivalence
        Test.Validity.Functions.Idempotence
        Test.Validity.Functions.Inverse
        Test.Validity.Functions.Validity
        Test.Validity.GenValidity.Property
        Test.Validity.Operations
        Test.Validity.Operations.Associativity
        Test.Validity.Operations.Commutativity
        Test.Validity.Operations.Identity
        Test.Validity.Property
        Test.Validity.Property.Utils
        Test.Validity.Relations
        Test.Validity.Relations.Antireflexivity
        Test.Validity.Relations.Antisymmetry
        Test.Validity.Relations.Reflexivity
        Test.Validity.Relations.Symmetry
        Test.Validity.Relations.Transitivity
        Test.Validity.Shrinking.Property
        Test.Validity.Types
    build-depends:
        base >=4.7 && <5,
        validity >=0.4 && <0.5,
        genvalidity >=0.4 && <0.5,
        QuickCheck -any,
        hspec >=2.1 && <2.5
    default-language: Haskell2010
    hs-source-dirs: src

test-suite genvalidity-property-doctests
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    build-depends:
        base -any,
        doctest >=0.9 && <0.12,
        genvalidity-property -any,
        directory >=1.2 && <1.4,
        filepath >=1.3 && <1.5
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded
