name:                genvalidity-text
version:             0.1.0.1
synopsis:            GenValidity support for Text
description:         Please see README.md
homepage:            https://github.com/NorfairKing/validity#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.GenValidity.Text
  build-depends:       base       < 5
                     , validity
                     , validity-text
                     , genvalidity
                     , text
                     , array
                     , QuickCheck
  default-language:    Haskell2010

test-suite genvalidity-text-test
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  other-modules:
    Data.GenValidity.TextSpec
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wall
    -fno-warn-name-shadowing
  build-depends:
      base

    , hspec
    , QuickCheck     >= 2.8 && < 2.9

    , genvalidity
    , genvalidity-text
    , text


source-repository head
  type:     git
  location: https://github.com/NorfairKing/validity
