name: genvalidity-text
version: 0.3.1.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity#readme
synopsis: GenValidity support for Text
description:
    Please see README.md
category: Testing
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    exposed-modules:
        Data.GenValidity.Text
    build-depends:
        base >=4.7 && <5,
        validity -any,
        validity-text >= 0.1.2,
        genvalidity -any,
        text -any,
        array -any,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: src

test-suite genvalidity-text-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        hspec -any,
        QuickCheck,
        genvalidity -any,
        genvalidity-text -any,
        genvalidity-hspec -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Data.GenValidity.TextSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-name-shadowing
