name: genvalidity-time
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity#readme
synopsis: GenValidity support for time
description:
    Please see README.md
category: Testing
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    exposed-modules:
        Data.GenValidity.Time
        Data.GenValidity.Time.Calendar
        Data.GenValidity.Time.Clock
        Data.GenValidity.Time.Format
        Data.GenValidity.Time.LocalTime
    build-depends:
        base >=4.7 && <5,
        validity-time >=0.1 && <0.2,
        genvalidity >=0.4 && <0.5,
        time -any,
        QuickCheck >=2.7
    default-language: Haskell2010
    hs-source-dirs: src

test-suite genvalidity-time-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        genvalidity-time -any,
        hspec -any,
        genvalidity-hspec -any,
        time -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Data.GenValidity.TimeSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-name-shadowing
