name: genvalidity-unordered-containers
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity#readme
synopsis: GenValidity support for unordered-containers
description:
    Please see README.md
category: Testing
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    exposed-modules:
        Data.GenValidity.UnorderedContainers
        Data.GenValidity.HashMap
        Data.GenValidity.HashSet
    build-depends:
        base <5,
        QuickCheck -any,
        genvalidity >=0.4 && <0.5,
        hashable -any,
        unordered-containers -any,
        validity >=0.4 && <0.5,
        validity-unordered-containers >=0.1 && <0.2
    default-language: Haskell2010
    hs-source-dirs: src

test-suite genvalidity-unordered-containers-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        unordered-containers -any,
        genvalidity -any,
        genvalidity-hspec -any,
        genvalidity-unordered-containers -any,
        hspec >=2.2 && <2.5
    default-language: Haskell2010
    hs-source-dirs: test/
    other-modules:
        Test.Validity.UnorderedContainersSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
