name: genvalidity-vector
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity#readme
synopsis: GenValidity support for vector
description:
    Please see README.md
category: Testing
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    exposed-modules:
        Data.GenValidity.Vector
    build-depends:
        base <5,
        QuickCheck -any,
        genvalidity >=0.4 && <0.5,
        validity >=0.4 && <0.5,
        validity-vector >=0.1 && <0.2,
        vector -any
    default-language: Haskell2010
    hs-source-dirs: src

test-suite genvalidity-vector-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        genvalidity -any,
        genvalidity-hspec -any,
        genvalidity-vector -any,
        hspec >=2.2 && <2.5,
        vector -any
    default-language: Haskell2010
    hs-source-dirs: test/
    other-modules:
        Test.Validity.VectorSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
